kustomize/services/variation-b/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: variation-b
spec:
  ports:
    - port: 80
      name: http
