kustomize/services/variation-b/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: variation-b
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: variation-b
              servicePort: http
            path: /
